# ClassifierVectors

./: CMakeLists.txt  Classified.cpp  Classified.h  Client.cpp  Client.h  HandleIO.cpp  HandleIO.h  README.md  Server.cpp  Server.h  makefile
Algorithms/: Algo.cpp  Algo.h  CanberraDistance.cpp  CanberraDistance.h  ChebyshevDistance.cpp  ChebyshevDistance.h  EuclideanDistance.cpp  EuclideanDistance.h  ManhattanGeometry.cpp  ManhattanGeometry.h  MinkowskiDistance.cpp  MinkowskiDistance.h
Commands/: AlgorithmSetting.cpp  AlgorithmSetting.h  ClassifyCommand.cpp  ClassifyCommand.h  ClassifyCommend.cpp  ClassifyCommend.h  Command.cpp  Command.h  DisplayResults.cpp  DisplayResults.h  DownloadResults.cpp  DownloadResults.h  Exit.cpp  Exit.h  UploadCommand.cpp  UploadCommand.h
Sockets/: Client.cpp  Client.h  Server.h
Sprites/: AlgoMap.cpp  AlgoMap.h  CLI.cpp  CLI.h  Classifier.cpp  Classifier.h  CommandsMap.cpp  CommandsMap.h  DBCreator.cpp  DBCreator.h  SpecialVector.cpp  SpecialVector.h
